ICWT station metadata

--- a/scripts/VisualizePhyto.Rmd
+++ b/scripts/VisualizePhyto.Rmd
@@ -26,7 +26,9 @@ ggplot(phyto.hist, aes(x=date, y=Green.Algae)) + geom_point() + facet_wrap(~Stat
 ```
 ## Exploring the temperature datasets
 
-# Air temperature CIMIS dataset
+Air temperature CIMIS dataset at Bryte and Little Hastings Tract
+
+Integrated continuous water temperature dataset
 
 ```{r}
 
@@ -40,7 +42,37 @@ ggplot(cimis.lht, aes(x = fdate, y = Max.Air.Temp..C.)) + geom_point() + theme_b
 
 ggplot(cimis.brt, aes(x = fdate, y = Max.Air.Temp..C.)) + geom_point() + theme_bw()
 
-
+# load the integrated continuous water temperature data
+load("../data/ContinuousWaterTemp_1985_2019.rda")
 
 ```
+
+# plot the stations for the integrated water temperature datasets
+
+```{r}
+library(sf)
+library(mapview)
+library(tidyverse)
+mapviewOptions(fgb=TRUE)
+
+# read the station data file for the water temperature data
+ICWT.stations = read.csv("../data/Tint_StationsMetadata.csv")
+
+
+ICWT.stations.map <- ICWT.stations %>%
+  filter(!is.na(Latitude)) %>%
+  select(Station, StartDateDataset, EndDateDataset, Agency, Latitude, Longitude) %>%
+  st_as_sf(coords=c("Longitude", "Latitude"),
+           crs=4326, remove=FALSE)
+
+mapview(ICWT.stations.map, zcol="Station")
+```
+
+Good stations to consider:
+
+1. SRH (Sacramento River at Hood) - 1999-2019
+2. RCS (Ridge Cut SLough at Knights Landing) - 2002-2019
+3. BKS (Barker Slough Pumpling Plant) - 2005-2019
+4. RIV (Rio Vista) - 1999-2017
+
 
