--- a/docs/explore_gam_data.Rmd
+++ b/docs/explore_gam_data.Rmd
@@ -7,11 +7,16 @@ editor_options:
   chunk_output_type: console
 ---
 
+
+    Here we read in cleaned dataset, plot data, look at outliers and correlations between variables. 
+
+*Last updated 1/14/2022 by C. Pien
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-Packages
+# Packages
 ```{r}
 library(tidyverse)
 library(readr)
@@ -21,7 +26,7 @@ library(psych) # for pairs
 ```
 
 
-Read in data
+# Read in data
 ```{r}
 covars <- read_csv("data_model/gam_data_covars.csv") %>%
   mutate(month = lubridate::month(date)) 
@@ -33,51 +38,57 @@ alldata <- read_csv("data_model/gam_data_covars_chla.csv")%>%
 
 
 # Look at outliers/patterns in data
+**We should investigate and clean up any outliers**
 
 ## Chla
 ```{r}
 chl_clean <- alldata %>%
-  filter(!is.na(chlorophyll))
+  filter(!is.na(chl))
 
-ggplot(chl_clean) + geom_histogram(aes(chlorophyll))
-ggplot(chl_clean) + geom_point(aes(date, chlorophyll, color = month), size = 3) + scale_color_viridis()
-ggplot(chl_clean) + geom_boxplot(aes(x = factor(month), y = chlorophyll))
-ggplot(chl_clean) + geom_boxplot(aes(x = factor(year), y = chlorophyll)) + theme(axis.text.x = element_text(angle = 90))
+ggplot(chl_clean) + geom_histogram(aes(chl))
+ggplot(chl_clean) + geom_point(aes(date, chl, color = month), size = 3) + scale_color_viridis()
+ggplot(chl_clean) + geom_boxplot(aes(x = factor(month), y = chl))
+ggplot(chl_clean) + geom_boxplot(aes(x = factor(water_year), y = chl)) + theme(axis.text.x = element_text(angle = 90))
+dotchart(chla_all$chl, lcolor = "white", xlab = "Chla", ylab = "row")
 ```
 
-## Flood metrics
 ```{r}
-flood_data <- covars %>%
-  select(c(date, month, daymet_precip_mm, Q_sday, flow_yolo, height_sac_na, inund_days))
-flood_long <- pivot_longer(flood_data, cols = 3:7, names_to = "variable", values_to = "value")
+model_covars <- covars %>%
+  select(c(date, month, water_year, daymet_precip_mm, Q_sday, flow_yolo, height_sac_na, inund_days, daymet_tmax, daymet_srad))
 
-ggplot(flood_long) + geom_point(aes(x = date, y = value, color = variable), alpha = 0.5)
+data_long <- pivot_longer(model_covars, cols = 4:10, names_to = "variable", values_to = "value")
 
-ggplot(flood_long) + geom_point(aes(x = date, y = value, color = variable), alpha = 0.5) + facet_wrap(variable~., scales = "free_y")
+ggplot(data_long) + geom_point(aes(x = date, y = value, color = variable), alpha = 0.5)
+
+ggplot(data_long) + geom_point(aes(x = date, y = value, color = variable), alpha = 0.5) + facet_wrap(variable~., scales = "free_y")
+
+ggplot(data_long) + geom_boxplot(aes(x = factor(month), y = value, fill = variable)) + facet_wrap(variable~., scales = "free_y") + theme_bw()
+
+ggplot(data_long) + geom_boxplot(aes(x = factor(water_year), y = value, fill = variable)) + facet_wrap(variable~., scales = "free_y") + theme_bw() + theme(axis.text.x = element_text(angle = 90))
 ```
 
-## Other metrics
+## Correlations between variables
 ```{r}
+# precip - stage height
+ggplot(filter(model_covars, daymet_precip_mm>0), aes(daymet_precip_mm, height_sac_na)) + geom_point()
 
-```
+# precip - inundation days
+ggplot(filter(model_covars, daymet_precip_mm>0), aes(daymet_precip_mm, inund_days, color = month)) + geom_point() + scale_color_viridis()
 
+# precip - flow_yolo
+ggplot(filter(model_covars, daymet_precip_mm>0), aes(daymet_precip_mm, flow_yolo)) + geom_point()
 
-## Correlations
-```{r}
-ggplot(filter(flood_data, daymet_precip_mm>0), aes(daymet_precip_mm, height_sac_na)) + geom_point()
+# flow_verona - flow_yolo
+ggplot(model_covars, aes(Q_sday, flow_yolo, color = month)) + geom_point() + scale_color_viridis()
 
-ggplot(filter(flood_data, daymet_precip_mm>0), aes(daymet_precip_mm, inund_days, color = month)) + geom_point() + scale_color_viridis()
+# radiation - temp
+ggplot(filter(model_covars, daymet_srad<1000), aes(daymet_tmax, daymet_srad, color = month)) + geom_point()
 
-ggplot(filter(flood_data, daymet_precip_mm>0), aes(daymet_precip_mm, flow_yolo)) + geom_point()
-
-ggplot(flood_data, aes(Q_sday, flow_yolo, color = month)) + geom_point() + scale_color_viridis()
-
-ggplot(filter(covars, sol_rad_w_sq_m<1000), aes(max_air_temp_c, sol_rad_w_sq_m)) + geom_point()
-
-ggplot(covars, aes(daymet_tmax, Q_sday)) + geom_point()
+# temp - flow
+ggplot(model_covars, aes(daymet_tmax, Q_sday)) + geom_point(aes(color = month))+ scale_color_viridis()
 
 # Useful plot (seasonality of temp vs stage height)
-ggplot(covars, aes(daymet_tmax, height_sac_na)) + geom_point(aes(color = month)) + scale_color_viridis()
+ggplot(model_covars, aes(daymet_tmax, height_sac_na)) + geom_point(aes(color = month)) 
 ```
 
 # Model exploration 
@@ -86,19 +97,21 @@ ggplot(covars, aes(daymet_tmax, height_sac_na)) + geom_point(aes(color = month))
 * sample, slice, mean, pick a station hierarchy?
 ```{r}
 data_unique_date = alldata %>% group_by(doy1998) %>% sample_n(1) %>%
-  mutate(log_chla = log(chlorophyll))
+  mutate(log_chla = log(chl))
 
 chla_covars = data_unique_date %>%
   filter(!is.na(log_chla))
 ```
 
-## See span and distribution of data
+## See span and distribution of data 
+Nice and normal!
 ```{r}
 ggplot(chla_covars) + geom_point(aes(date, log_chla))
 ggplot(chla_covars) + geom_histogram(aes(log_chla))
 ```
 
 ## Check for correlation between all vars
+Strong correlations between all flow metrics. 
 ```{r}
 # check for correlation between all predictors, and the response variable
 x = na.omit(chla_covars) %>% select(log_chla, Q_sday, Q_1day, Q_mwk, T_mwk, Srad_mwk, inund_days, doy1998)
@@ -106,11 +119,16 @@ x = na.omit(chla_covars) %>% select(log_chla, Q_sday, Q_1day, Q_mwk, T_mwk, Srad
 (corr_plot <- pairs.panels(x, hist.col = "white", cex.cor = 1.5, pch = 21, stars = TRUE))
 ```
 
-Save correlation plot
+### Save correlation plot
 ```{r}
  tiff(filename = "figures/corr_plot_gamvars.tiff", width = 10, height = 8, units = "in", res = 300)
  # plot with R2 values on the diagnolly opposite side
 corr_plot
  dev.off()
+```
+
+
+```{r}
+
 ```
 
