Had made some changes when trying to make plots for presentation

--- a/docs/make_gam_model.Rmd
+++ b/docs/make_gam_model.Rmd
@@ -255,7 +255,7 @@ gam2 <- gam(log_chla~s(inund_days, k = 12) + s(Q_sday, k = 6) + s(T_mwk, k = 6),
 
 gam.check(gam2)
 summary(gam2)
-plot(gam2, pages = 1, all.terms = TRUE, se = TRUE, ylab = "Chlorophyll (ug/L)")
+plot(gam2, pages = 1, all.terms = TRUE, se = TRUE, ylab = "log Chlorophyll (ug/L)")
 
 # FLow and Srad and inundation
 gam3 <- gam(log_chla~s(inund_days, k = 12) + s(Q_sday, k = 6) + s(Srad_mwk, k = 15), method = "REML", data = x)
@@ -269,10 +269,10 @@ plot(gam3)
 ##### Export plots for IEP/ISB presentation (Model gam1)
 ```{r}
 png("figures/gamplotresults.png", width = 3.5, height = 3, units = "in", pointsize = 12, res = 300)
-plot(gam1, pages = 2, all.terms = TRUE, se = TRUE, ylab = "Chlorophyll (ug/L)")
+plot(gam1, pages = 2, all.terms = TRUE, se = TRUE, ylab = "log Chlorophyll")
 dev.off()
 png("figures/gamplotresults_flow_inund.png", width = 5.5, height = 3, units = "in", pointsize = 12, res = 300)
-plot(gam1, pages = 1, all.terms = TRUE, se = TRUE, ylab = "Chlorophyll (ug/L)")
+plot(gam1, pages = 1, all.terms = TRUE, se = TRUE, ylab = "log Chlorophyll")
 dev.off()
 ```
 
