--- a/docs/make_gam_model.Rmd
+++ b/docs/make_gam_model.Rmd
@@ -269,11 +269,33 @@ str(gam_data)
 # Look at data
 ggplot(gam_data) + geom_point(aes(date, chlorophyll))
 ggplot(gam_data) + geom_point(aes(Sradmwk, WTmwk))
+ggplot(gam_data) + geom_smooth(aes(WTmwk, chlorophyll, color = factor(inundation)))
+ggplot(gam_data) + geom_smooth(aes(Q_sday, chlorophyll, color = factor(inundation)))
+ggplot(gam_data) + geom_smooth(aes(Sradmwk, chlorophyll, color = factor(inundation)))
 ```
+
+
+Notes
+- Response: log-chla (discrete)
+- Covars: Flow, inundation days, Water temperature, Air temperature, Solar Radiation, Region, seasonal (dowy, wy, season, month)
+
+- Autocorrelation: 
+* detrend data/use anomaly (hard to interpret results) and then add seasonal variable (dowy). Would show what happens when temps are warmer than expected
+* different years share same trend for seasonality (global smoother)
+
+- Visualize everything, get a sense of # wiggles
+- Make k too small
+- gam.check: guidance on k. If edf close to k' it's using all the wiggle space possible. k-index <1 may indicate k is too low. You can overrule if you have a reason to keep a certain wiggliness.
+
+- Consider hurdle model given structural zeros
+
+- Look at documentation of gam function
 
 ```{r}
 # Flow, inundation days, water temperature, day of year
-gam1 <- gam(log_chla~ s(Q_sday, k = 10) + s(inund_days, k = 15) + s(WTmwk, k = 10) + s(dowy, k = 10, bs = "cc") + s(water_year, k = 6), method = "REML", data = gam_data)
+# consider water_year as global model or random effect
+# consider water year index
+gam1 <- gam(log_chla~ s(Q_sday, k = 10) + s(inund_days, k = 15) + s(WTmwk, k = 10) + s(dowy, k = 10, bs = "cc"), method = "REML", data = gam_data)
 
 par(mfrow = c(2,2))
 gam.check(gam1)
