--- a/docs/make_explore_gam_structure.Rmd
+++ b/docs/make_explore_gam_structure.Rmd
@@ -384,15 +384,57 @@ gam1.1 <- gam(log_chla ~ s(log_qsdy, by = inundation) + s(dowy, bs = "cc"), meth
 gam1.2 <- gam(log_chla ~ te(log_qsdy, dowy, by = inundation), method = "REML", data = x.idys, family = "gaussian")
 gam1.3 <- gam(log_chla ~ te(log_idys, dowy, by = inundation), method = "REML", data = x.idys, family = "gaussian")
 
-AIC(gam0, gam1.0, gam1.1, gam1.2, gam1.3, gam1.4, gam1.5)
+AIC(gam0, gam1.0, gam1.1, gam1.2, gam1.3)
 
 gam.check(gam1.1)
 gam.check(gam1.2)
 gam.check(gam1.3)
+gam.check(gam1.4)
 
 summary(gam1.1)
 summary(gam1.2)
 summary(gam1.3)
+summary(gam1.4)
+
+resid = residuals(gam1.3)
+acf(resid)
+pacf(resid)
 
 ```
 
+
+#### Model validation for the gam model based on hypothesis testing
+
+```{r}
+
+  # validate the final model by plotting residuals and save to a tiff
+  tiff(filename = "figures/gam_model_validation_qsdy.tiff", width = 10, height = 8, units = "in", res = 200)
+  resid = residuals(gam1.3)
+  op = par(mfrow = c(2, 2), mar = c(5, 4, 1, 2), cex = 1.2)
+  # Plot 1: Residuals vs. Fitted values; should be centered around 0
+  plot(fitted(gam1.3), resid, xlab = "Fitted values", ylab = "Residuals")
+  # Plot 2: histogram of the residuals; should be centered around 0
+  hist(resid, xlab = 'Residuals', main = "")
+  # Plot 3: is there autocorrelation in the residuals?
+  acf(resid)
+  # Plots 4,5,6: the Residuals vs. all the predictors; should be centered around 0
+  plot(x.idys$log_qsdy, resid, xlab = "Flow",   ylab = "Residuals")
+  par(op)
+  dev.off()
+
+  # validate the final model by plotting residuals and save to a tiff
+  tiff(filename = "figures/gam_model_validation_idys.tiff", width = 10, height = 8, units = "in", res = 200)
+  resid = residuals(gam1.4)
+  op = par(mfrow = c(2, 2), mar = c(5, 4, 1, 2), cex = 1.2)
+  # Plot 1: Residuals vs. Fitted values; should be centered around 0
+  plot(fitted(gam1.4), resid, xlab = "Fitted values", ylab = "Residuals")
+  # Plot 2: histogram of the residuals; should be centered around 0
+  hist(resid, xlab = 'Residuals', main = "")
+  # Plot 3: is there autocorrelation in the residuals?
+  acf(resid)
+  # Plots 4,5,6: the Residuals vs. all the predictors; should be centered around 0
+  plot(x.idys$log_idys, resid, xlab = "Consecutive inundation days",   ylab = "Residuals")
+  par(op)
+  dev.off()
+
+```
